SOCPlayer.updatePotentials bugfix: Roads after opponent settlement placed: ourRoads as HashSet; Hashtable should have used .containsKey